--- a/gallery.html
+++ b/gallery.html
@@ -37,10 +37,10 @@
 
 <div class="gallery">
     <div class="slider">
-        <span style="--i:1;"><img src="./pic/shop10.jpg" alt="" /></span>
+        <span style="--i:1;"><img src="./pic/Food17.jpg" alt="" /></span>
         <span style="--i:2;"><img src="./pic/shop11.jpg" alt="" /></span>
-        <span style="--i:3;"><img src="./pic/Juic2.jpg" alt="" /></span>
-        <span style="--i:4;"><img src="./pic/shop14.jpg" alt="" /></span>
+        <span style="--i:3;"><img src="./pic/Food15.jpg" alt="" /></span>
+        <span style="--i:4;"><img src="./pic/Food16.jpg" alt="" /></span>
         <span style="--i:5;"><img src="./Pic/bik2.jpg" alt="" /></span>
         <span style="--i:6;"><img src="./Pic/Chicken.jpg" alt="" /></span>
         <span style="--i:7;"><img src="./Pic/Fam12.jpg" alt="" /></span>
